# markuapi

./: .dockerignore  .gitignore  .pytest.ini  Dockerfile  README.md  api.py  lib.py  pyproject.toml  render.yaml  requirements.txt  search.py
.github/workflows/: deploy.yml  test.yml
src/: api.py  lib.py  search.py
src/scrape/: base_scraper.py  info_drama_scraper.py  scrape_service.py  search_drama_scraper.py  search_scraper.py
src/utility/: lib.py  models.py
tests/: __100_dramas.json  __100_dramas.txt  ___100_dramas.json  ___country_id.json  ___year_id.txt  test_api.py  test_info.py  test_list.py  test_search.py  test_utils.py
