[project]
name = "markuapi"
version = "0.1.0"
description = "A basic web scraper API for Filmarks Dramas"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocron>=2.1",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "msgspec>=0.19.0",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "coverage>=7.10.1",
    "ruff>=0.12.7",
]

[tool.poetry]
packages = [{ include = "src" }]